--- a/manifest.json
+++ b/manifest.json
@@ -70,7 +70,14 @@
       "Sample List/Abstract%20Style/54%20-%20Abstract%20Style.jpg",
       "Sample List/Abstract%20Style/55%20-%20Abstract%20Style.jpg",
       "Sample List/Abstract%20Style/56%20-%20Abstract%20Style.jpg",
+      "Sample List/Abstract%20Style/57%20-%20Abstract%20Style.jpg",
+      "Sample List/Abstract%20Style/58%20-%20Abstract%20Style.jpg",
+      "Sample List/Abstract%20Style/59%20-%20Abstract%20Style.jpg",
       "Sample List/Abstract%20Style/6%20-%20Abstract%20Style.jpg",
+      "Sample List/Abstract%20Style/60%20-%20Abstract%20Style.jpg",
+      "Sample List/Abstract%20Style/61%20-%20Abstract%20Style.jpg",
+      "Sample List/Abstract%20Style/62%20-%20Abstract%20Style.jpg",
+      "Sample List/Abstract%20Style/63.%20-%20Abstract%20Style.jpg",
       "Sample List/Abstract%20Style/7%20-%20Abstract%20Style.jpg",
       "Sample List/Abstract%20Style/8%20-%20Abstract%20Style.jpg",
       "Sample List/Abstract%20Style/9%20-%20Abstract%20Style.jpg",
@@ -132,7 +139,18 @@
       "Sample List/Contemporary%20Style/10%20-%20Contemporary%20Style.jpg",
       "Sample List/Contemporary%20Style/11%20-%20Contemporary%20Style.jpg",
       "Sample List/Contemporary%20Style/12%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/13%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/14%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/15%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/16%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/17%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/18%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/19%20-%20Contemporary%20Style.jpg",
       "Sample List/Contemporary%20Style/2%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/20%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/21%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/22%20-%20Contemporary%20Style.jpg",
+      "Sample List/Contemporary%20Style/23%20-%20Contemporary%20Style.jpg",
       "Sample List/Contemporary%20Style/3%20-%20Contemporary%20Style.jpg",
       "Sample List/Contemporary%20Style/4%20-%20Contemporary%20Style.jpg",
       "Sample List/Contemporary%20Style/5%20-%20Contemporary%20Style.jpg",
