--- a/manifest.json
+++ b/manifest.json
@@ -340,6 +340,7 @@
       "Sample List/Pop Art Style/28 - Pop Art Style.jpg"
     ],
     "Van Gogh Style": [
+      "Sample List/Van Gogh Style/00 - Van Gogh Style.jpg",
       "Sample List/Van Gogh Style/1 - Van Gogh Style.jpg",
       "Sample List/Van Gogh Style/2 - Van Gogh Style.jpg",
       "Sample List/Van Gogh Style/3 - Van Gogh Style.jpg",
@@ -378,8 +379,7 @@
       "Sample List/Van Gogh Style/36 - Van Gogh Style.jpg",
       "Sample List/Van Gogh Style/37 - Van Gogh Style.jpg",
       "Sample List/Van Gogh Style/38 - Van Gogh Style.jpg",
-      "Sample List/Van Gogh Style/50 - Van Gogh Style.jpg",
-      "Sample List/Van Gogh Style/__ - Van Gogh Style.jpg"
+      "Sample List/Van Gogh Style/50 - Van Gogh Style.jpg"
     ],
     "Watercolor Style": [
       "Sample List/Watercolor Style/1 - Watercolor Style.jpg",
