--- a/manifest.json
+++ b/manifest.json
@@ -80,7 +80,6 @@
       "Sample List/Abstract Style/59 - Abstract Style.jpg",
       "Sample List/Abstract Style/60 - Abstract Style.jpg",
       "Sample List/Abstract Style/61 - Abstract Style.jpg",
-      "Sample List/Abstract Style/62 - Abstract Style.jpg",
       "Sample List/Abstract Style/63 - Abstract Style.jpg",
       "Sample List/Abstract Style/63. - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 1 - Abstract Style.jpg",
@@ -159,7 +158,8 @@
       "Sample List/Contemporary Style/20 - Contemporary Style.jpg",
       "Sample List/Contemporary Style/21 - Contemporary Style.jpg",
       "Sample List/Contemporary Style/22 - Contemporary Style.jpg",
-      "Sample List/Contemporary Style/23 - Contemporary Style.jpg"
+      "Sample List/Contemporary Style/23 - Contemporary Style.jpg",
+      "Sample List/Contemporary Style/24 - Contemporary Style.jpg"
     ],
     "Cubism Style": [
       "Sample List/Cubism Style/1 - Cubism Style.jpg",
