--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,6 @@
       "Sample List/Abstract Style/9 - Abstract Style.jpg",
       "Sample List/Abstract Style/10 - Abstract Style.jpg",
       "Sample List/Abstract Style/11 - Abstract Style.jpg",
-      "Sample List/Abstract Style/12 - 129340 - Abstract Style.jpg",
       "Sample List/Abstract Style/12 - Abstract Style.jpg",
       "Sample List/Abstract Style/13 - Abstract Style.jpg",
       "Sample List/Abstract Style/14 - Abstract Style.jpg",
@@ -82,6 +81,8 @@
       "Sample List/Abstract Style/61 - Abstract Style.jpg",
       "Sample List/Abstract Style/63 - Abstract Style.jpg",
       "Sample List/Abstract Style/63. - Abstract Style.jpg",
+      "Sample List/Abstract Style/64 - Abstract Style.jpg",
+      "Sample List/Abstract Style/65 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 1 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 2 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 3 - Abstract Style.jpg",
@@ -277,10 +278,10 @@
       "Sample List/Matisse Style/3 - Matisse Style.jpg",
       "Sample List/Matisse Style/4 - Matisse Style.jpg",
       "Sample List/Matisse Style/5 - Matisse Style.jpg",
-      "Sample List/Matisse Style/5.png",
       "Sample List/Matisse Style/6 - Matisse Style.jpg",
       "Sample List/Matisse Style/7 - Matisse Style.jpg",
-      "Sample List/Matisse Style/8 - Matisse Style.jpg"
+      "Sample List/Matisse Style/8 - Matisse Style.jpg",
+      "Sample List/Matisse Style/9 - Matisse Style.jpg"
     ],
     "Modern Style": [
       "Sample List/Modern Style/1 - Modern Style.jpg",
