--- a/manifest.json
+++ b/manifest.json
@@ -393,7 +393,20 @@
       "Sample List/Watercolor Style/8 - Watercolor Style.jpg",
       "Sample List/Watercolor Style/9 - Watercolor Style.jpg",
       "Sample List/Watercolor Style/10 - Watercolor Style.jpg",
-      "Sample List/Watercolor Style/11 - Watercolor Style.jpg"
+      "Sample List/Watercolor Style/11 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/12 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/13 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/14 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/15 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/16 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/17 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/18 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/19 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/20 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/21 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/22 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/23 - Watercolor Style.jpg",
+      "Sample List/Watercolor Style/24 - Watercolor Style.jpg"
     ]
   }
 }
