--- a/manifest.json
+++ b/manifest.json
@@ -83,6 +83,9 @@
       "Sample List/Abstract Style/63. - Abstract Style.jpg",
       "Sample List/Abstract Style/64 - Abstract Style.jpg",
       "Sample List/Abstract Style/65 - Abstract Style.jpg",
+      "Sample List/Abstract Style/66 - Abstract Style.jpg",
+      "Sample List/Abstract Style/67 - Abstract Style.jpg",
+      "Sample List/Abstract Style/68 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 1 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 2 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 3 - Abstract Style.jpg",
