--- a/manifest.json
+++ b/manifest.json
@@ -86,11 +86,15 @@
       "Sample List/Abstract Style/66 - Abstract Style.jpg",
       "Sample List/Abstract Style/67 - Abstract Style.jpg",
       "Sample List/Abstract Style/68 - Abstract Style.jpg",
+      "Sample List/Abstract Style/69 - Abstract Style.jpg",
+      "Sample List/Abstract Style/70 - Abstract Style.jpg",
+      "Sample List/Abstract Style/71 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 1 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 2 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 3 - Abstract Style.jpg",
       "Sample List/Abstract Style/BACK - 4 - Abstract Style.jpg",
-      "Sample List/Abstract Style/BACK - 5 - Abstract Style.jpg"
+      "Sample List/Abstract Style/BACK - 5 - Abstract Style.jpg",
+      "Sample List/Abstract Style/BACK - 6 - Abstract Style.jpg"
     ],
     "Black & White Style": [
       "Sample List/Black & White Style/00 - Black & White Style.jpg",
