--- a/manifest.json
+++ b/manifest.json
@@ -315,7 +315,8 @@
       "Sample List/Modern Style/22 - Modern Style.jpg",
       "Sample List/Modern Style/23 - Modern Style.jpg",
       "Sample List/Modern Style/24 - Modern Style.jpg",
-      "Sample List/Modern Style/25 - Modern Style.jpg"
+      "Sample List/Modern Style/25 - Modern Style.jpg",
+      "Sample List/Modern Style/26 - Modern Style.jpg"
     ],
     "Pop Art Style": [
       "Sample List/Pop Art Style/1 - Pop Art Style.jpg",
