--- a/manifest.json
+++ b/manifest.json
@@ -151,7 +151,15 @@
         "Sample List/Black & White Style/24 - Black & White Style.jpg"
       ],
       "backgrounds": [
-        "Sample List/Black & White Style/Background/1 - Background.jpg"
+        "Sample List/Black & White Style/Background/1 - Background.jpg",
+        "Sample List/Black & White Style/Background/2 - Background.jpg",
+        "Sample List/Black & White Style/Background/3 - Background.jpg",
+        "Sample List/Black & White Style/Background/4 - Background.jpg",
+        "Sample List/Black & White Style/Background/5 - Background.jpg",
+        "Sample List/Black & White Style/Background/6 - Background.jpg",
+        "Sample List/Black & White Style/Background/7 - Background.jpg",
+        "Sample List/Black & White Style/Background/8 - Background.jpg",
+        "Sample List/Black & White Style/Background/9 - Background.jpg"
       ]
     },
     "Cartoon Style": {
