--- a/manifest.json
+++ b/manifest.json
@@ -146,10 +146,7 @@
         "Sample List/Abstract Style/Background/52 - Background.jpg",
         "Sample List/Abstract Style/Background/53 - Background.jpg",
         "Sample List/Abstract Style/Background/54 - Background.jpg",
-        "Sample List/Abstract Style/Background/55 - Background.jpg",
-        "Sample List/Abstract Style/Background/56 - Background.jpg",
-        "Sample List/Abstract Style/Background/57 - Background.jpg",
-        "Sample List/Abstract Style/Background/58 - Background.jpg"
+        "Sample List/Abstract Style/Background/55 - Background.jpg"
       ]
     },
     "Black & White Style": {
@@ -384,7 +381,10 @@
         "Sample List/Geometric Style/Background/1 - Background.jpg",
         "Sample List/Geometric Style/Background/2 - Background.jpg",
         "Sample List/Geometric Style/Background/3 - Background.jpg",
-        "Sample List/Geometric Style/Background/4 - Background.jpg"
+        "Sample List/Geometric Style/Background/4 - Background.jpg",
+        "Sample List/Geometric Style/Background/5 - Background.jpg",
+        "Sample List/Geometric Style/Background/6 - Background.jpg",
+        "Sample List/Geometric Style/Background/7 - Background.jpg"
       ]
     },
     "Graffiti Cartoon Style": {
