--- a/manifest.json
+++ b/manifest.json
@@ -89,7 +89,8 @@
         "Sample List/Abstract Style/68 - Abstract Style.jpg",
         "Sample List/Abstract Style/69 - Abstract Style.jpg",
         "Sample List/Abstract Style/70 - Abstract Style.jpg",
-        "Sample List/Abstract Style/71 - Abstract Style.jpg"
+        "Sample List/Abstract Style/71 - Abstract Style.jpg",
+        "Sample List/Abstract Style/72 - Abstract Style.jpg"
       ],
       "backgrounds": [
         "Sample List/Abstract Style/Background/1 - Background.jpg",
@@ -121,7 +122,6 @@
         "Sample List/Abstract Style/Background/27 - Background.jpg",
         "Sample List/Abstract Style/Background/28 - Background.jpg",
         "Sample List/Abstract Style/Background/29 - Background.jpg",
-        "Sample List/Abstract Style/Background/30 - Background.jpg",
         "Sample List/Abstract Style/Background/31 - Background.jpg",
         "Sample List/Abstract Style/Background/32 - Background.jpg",
         "Sample List/Abstract Style/Background/33 - Background.jpg",
@@ -146,7 +146,21 @@
         "Sample List/Abstract Style/Background/52 - Background.jpg",
         "Sample List/Abstract Style/Background/53 - Background.jpg",
         "Sample List/Abstract Style/Background/54 - Background.jpg",
-        "Sample List/Abstract Style/Background/55 - Background.jpg"
+        "Sample List/Abstract Style/Background/55 - Background.jpg",
+        "Sample List/Abstract Style/Background/56 - Background.jpg",
+        "Sample List/Abstract Style/Background/57 - Background.jpg",
+        "Sample List/Abstract Style/Background/58 - Background.jpg",
+        "Sample List/Abstract Style/Background/59 - Background.jpg",
+        "Sample List/Abstract Style/Background/60 - Background.jpg",
+        "Sample List/Abstract Style/Background/60.png",
+        "Sample List/Abstract Style/Background/61 - Background.jpg",
+        "Sample List/Abstract Style/Background/62 - Background.jpg",
+        "Sample List/Abstract Style/Background/63 - Background.jpg",
+        "Sample List/Abstract Style/Background/64 - Background.jpg",
+        "Sample List/Abstract Style/Background/65 - Background.jpg",
+        "Sample List/Abstract Style/Background/66 - Background.jpg",
+        "Sample List/Abstract Style/Background/67 - Background.jpg",
+        "Sample List/Abstract Style/Background/68 - Background.jpg"
       ]
     },
     "Black & White Style": {
