--- a/manifest.json
+++ b/manifest.json
@@ -160,7 +160,8 @@
         "Sample List/Abstract Style/Background/65 - Background.jpg",
         "Sample List/Abstract Style/Background/66 - Background.jpg",
         "Sample List/Abstract Style/Background/67 - Background.jpg",
-        "Sample List/Abstract Style/Background/68 - Background.jpg"
+        "Sample List/Abstract Style/Background/68 - Background.jpg",
+        "Sample List/Abstract Style/Background/69 - Background.jpg"
       ]
     },
     "Black & White Style": {
@@ -532,7 +533,8 @@
         "Sample List/Pop Art Style/25 - Pop Art Style.jpg",
         "Sample List/Pop Art Style/26 - Pop Art Style.jpg",
         "Sample List/Pop Art Style/27 - Pop Art Style.jpg",
-        "Sample List/Pop Art Style/28 - Pop Art Style.jpg"
+        "Sample List/Pop Art Style/28 - Pop Art Style.jpg",
+        "Sample List/Pop Art Style/29 - Pop Art Style.jpg"
       ],
       "backgrounds": [
         "Sample List/Pop Art Style/Background/1 - Background.jpg",
