--- a/manifest.json
+++ b/manifest.json
@@ -162,7 +162,8 @@
         "Sample List/Abstract Style/Background/67 - Background.jpg",
         "Sample List/Abstract Style/Background/68 - Background.jpg",
         "Sample List/Abstract Style/Background/69 - Background.jpg",
-        "Sample List/Abstract Style/Background/70 - Background.jpg"
+        "Sample List/Abstract Style/Background/70 - Background.jpg",
+        "Sample List/Abstract Style/Background/71 - Background.jpg"
       ]
     },
     "Black & White Style": {
