--- a/manifest.json
+++ b/manifest.json
@@ -163,7 +163,8 @@
         "Sample List/Abstract Style/Background/68 - Background.jpg",
         "Sample List/Abstract Style/Background/69 - Background.jpg",
         "Sample List/Abstract Style/Background/70 - Background.jpg",
-        "Sample List/Abstract Style/Background/71 - Background.jpg"
+        "Sample List/Abstract Style/Background/71 - Background.jpg",
+        "Sample List/Abstract Style/Background/72 - Background.jpg"
       ]
     },
     "Black & White Style": {
@@ -503,7 +504,8 @@
         "Sample List/Modern Style/Background/24 - Background.jpg",
         "Sample List/Modern Style/Background/25 - Background.jpg",
         "Sample List/Modern Style/Background/26 - Background.jpg",
-        "Sample List/Modern Style/Background/27 - Background.jpg"
+        "Sample List/Modern Style/Background/27 - Background.jpg",
+        "Sample List/Modern Style/Background/28.jpg"
       ]
     },
     "Pop Art Style": {
