--- a/manifest.json
+++ b/manifest.json
@@ -505,7 +505,7 @@
         "Sample List/Modern Style/Background/25 - Background.jpg",
         "Sample List/Modern Style/Background/26 - Background.jpg",
         "Sample List/Modern Style/Background/27 - Background.jpg",
-        "Sample List/Modern Style/Background/28.jpg"
+        "Sample List/Modern Style/Background/28 - Background.jpg"
       ]
     },
     "Pop Art Style": {
