--- a/manifest.json
+++ b/manifest.json
@@ -596,7 +596,9 @@
         "Sample List/Modern Style/Background/34 - Background.jpg",
         "Sample List/Modern Style/Background/35 - Background.jpg",
         "Sample List/Modern Style/Background/36 - Background.jpg",
-        "Sample List/Modern Style/Background/37 - Background.jpg"
+        "Sample List/Modern Style/Background/37 - Background.jpg",
+        "Sample List/Modern Style/Background/38 - Background.jpg",
+        "Sample List/Modern Style/Background/39 - Background.jpg"
       ]
     },
     "Pop Art Style": {
