--- a/manifest.json
+++ b/manifest.json
@@ -557,7 +557,8 @@
         "Sample List/Modern Style/23 - Modern Style.jpg",
         "Sample List/Modern Style/24 - Modern Style.jpg",
         "Sample List/Modern Style/25 - Modern Style.jpg",
-        "Sample List/Modern Style/26 - Modern Style.jpg"
+        "Sample List/Modern Style/26 - Modern Style.jpg",
+        "Sample List/Modern Style/27 - Modern Style.jpg"
       ],
       "backgrounds": [
         "Sample List/Modern Style/Background/1 - Background.jpg",
@@ -598,7 +599,8 @@
         "Sample List/Modern Style/Background/36 - Background.jpg",
         "Sample List/Modern Style/Background/37 - Background.jpg",
         "Sample List/Modern Style/Background/38 - Background.jpg",
-        "Sample List/Modern Style/Background/39 - Background.jpg"
+        "Sample List/Modern Style/Background/39 - Background.jpg",
+        "Sample List/Modern Style/Background/40 - Background.jpg"
       ]
     },
     "Pop Art Style": {
