--- a/manifest.json
+++ b/manifest.json
@@ -171,7 +171,8 @@
         "Sample List/Abstract Style/Background/76 - Background.jpg",
         "Sample List/Abstract Style/Background/77 - Background.jpg",
         "Sample List/Abstract Style/Background/78 - Background.jpg",
-        "Sample List/Abstract Style/Background/79 - Background.jpg"
+        "Sample List/Abstract Style/Background/79 - Background.jpg",
+        "Sample List/Abstract Style/Background/80 - Background.jpg"
       ]
     },
     "Black & White Style": {
