--- a/manifest.json
+++ b/manifest.json
@@ -102,6 +102,7 @@
         "Sample List/Abstract Style/Background/7 - Background.jpg",
         "Sample List/Abstract Style/Background/8 - Background.jpg",
         "Sample List/Abstract Style/Background/9 - Background.jpg",
+        "Sample List/Abstract Style/Background/10 - Background.jpg",
         "Sample List/Abstract Style/Background/11 - Background.jpg",
         "Sample List/Abstract Style/Background/12 - Background.jpg",
         "Sample List/Abstract Style/Background/13 - Background.jpg",
