--- a/manifest.json
+++ b/manifest.json
@@ -90,7 +90,8 @@
         "Sample List/Abstract Style/69 - Abstract Style.jpg",
         "Sample List/Abstract Style/70 - Abstract Style.jpg",
         "Sample List/Abstract Style/71 - Abstract Style.jpg",
-        "Sample List/Abstract Style/72 - Abstract Style.jpg"
+        "Sample List/Abstract Style/72 - Abstract Style.jpg",
+        "Sample List/Abstract Style/73 - Abstract Style.jpg"
       ],
       "backgrounds": [
         "Sample List/Abstract Style/Background/1 - Background.jpg",
